[tool.poetry]
name = "airflow-testing-guide"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "airflow_testing_guide"}]

[tool.poetry.dependencies]
python = ">=3.7,<4"
apache-airflow = "^2.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
